--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,44 +9,70 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <article class="article">
 
-    <header>
-        <h1>Simulador-Contabilidad</h1>
-        <button id="abrir" class="abrir-menu"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-</svg></button>
-        <nav class="nav" id="nav">
-            <button class="cerrar-menu" id="cerrar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
-                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-              </svg></button>
-            <h3>MENÚ</h3>
-            <ul class="nav-list">
-                <li class="li"><a id="registro" href="#">Ingresar Registro</a></li>
-                <li class="li"><a href="#">Quiénes somos</a></li>
-                <li class="li"><a href="#">Servicios</a></li>
-                <li class="li"><a href="#">Qué hacemos</a></li>
-                <li class="li"><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <h1>Simulador-Contabilidad</h1>
+            <button id="abrir" class="abrir-menu"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                    fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                </svg></button>
+            <nav class="nav" id="nav">
+                <button class="cerrar-menu" id="cerrar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        fill="currentColor" class="bi bi-x-square" viewBox="0 0 16 16">
+                        <path
+                            d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                        <path
+                            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                    </svg></button>
+                <h3>MENÚ</h3>
+                <ul class="nav-list">
+                    <li class="li"><a id="registro" href="#">Ingresar Registro</a></li>
+                    <li class="li"><a href="#">Quiénes somos</a></li>
+                    <li class="li"><a href="#">Servicios</a></li>
+                    <li class="li"><a href="#">Qué hacemos</a></li>
+                    <li class="li"><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <main class="main">
-        <div class="contenedor">
+        <main class="contenedor">
+
+            <h3>Formulario</h3>
             <form class="formulario" action="#" method="get">
 
-                <input type="number" name="registrar-datos" id="registros"  placeholder="Ej: $5000">
-                <input type="number" name="registrar-interes" id="interes" placeholder="Ej: 40%">
-                <input type="number" name="registrar-salida" id="salidas" placeholder="Ej: $1000">
-                <input type="submit" id="boton-calcular" value="calcular">
-                <div class="mensaje"></div>
-            </form>
-            
+                <div class="inputs">
+                    <label for="ventas">Ventas:</label>
+                    <input type="number" placeholder="Ej: $5000" id="ventas" name="ventas" required>
 
-        </div>
-    </main>
-    
+                    <label for="interes">Interés:</label>
+                    <input type="number" placeholder="Ej: 40%" id="interes" name="interes" required>
+
+                    <label for="salidas">Salidas:</label>
+                    <input type="number" placeholder="Ej: $2200" id="salidas" name="salidas" required>
+
+                    <button type="submit" id="calcular">Calcular</button>
+                </div>
+
+                <div class="resultado">
+                    <div class="boton-salir">
+                        <button id="salir">Salir</button>
+                    </div>
+                    <h4>Resultado:</h4>
+                    <div class="resp"></div>
+                </div>
+
+            </form>
+
+        </main>
+    </article>
+
+
+
     <script src="jssidebar.js"></script>
 </body>
+
 </html>
