--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <article class="article">
 
         <header>
-            <h1>Simulador-Contabilidad</h1>
+            <h1>Simulador de Contabilidad</h1>
             <button id="abrir" class="abrir-menu"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                     fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
